packages/@lwc/engine-server/src/__tests__/fixtures/wire/errors/throws-on-computed-method/modules/x/wire/wire.js
import { LightningElement, wire } from 'lwc';
import { adapter } from './adapter';
const sym = Symbol('computed prop');

export default class Wire extends LightningElement {
    @wire(adapter, { name: 'symbol' })
    [sym]() {
        return 'john was here';
    }

    get exposedSymbol() {
        return this[sym]();
    }
}
